[gd_scene load_steps=9 format=3 uid="uid://ch8832wi2x1m5"]

[ext_resource type="Script" path="res://script/unit/stat_bar.gd" id="1_sd4cv"]
[ext_resource type="Theme" uid="uid://c2dqbtyc2vdb7" path="res://main_theme.tres" id="2_odtiu"]
[ext_resource type="Texture2D" uid="uid://t1qc3qoqh11e" path="res://art/morbubble.png" id="2_y8s12"]
[ext_resource type="PackedScene" uid="uid://dx2ec2whaesn" path="res://tooltip_control.tscn" id="3_8sord"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8wpu2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n0wq0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0ys1i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5m56j"]
bg_color = Color(0.780392, 0.239216, 0.321569, 0.4)

[node name="HBoxContainer" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sd4cv")

[node name="StatBar" type="ProgressBar" parent="."]
z_index = 1
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_filter = 1
theme_override_styles/background = SubResource("StyleBoxEmpty_8wpu2")
theme_override_styles/fill = SubResource("StyleBoxFlat_n0wq0")
show_percentage = false

[node name="DamageBar" type="ProgressBar" parent="StatBar"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_0ys1i")
theme_override_styles/fill = SubResource("StyleBoxFlat_5m56j")
fill_mode = 1
show_percentage = false

[node name="StatName" type="Label" parent="StatBar"]
visible = false
layout_mode = 2
offset_top = 4.0
offset_right = 47.0
offset_bottom = 27.0
theme = ExtResource("2_odtiu")
text = "Name"

[node name="NumberVal" type="Label" parent="StatBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_odtiu")
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="StatBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.0
offset_right = 27.0
offset_bottom = 11.0
grow_vertical = 2
texture = ExtResource("2_y8s12")
stretch_mode = 3

[node name="TooltipArea" parent="StatBar/TextureRect" instance=ExtResource("3_8sord")]
layout_mode = 1

[node name="GainLabel" type="Label" parent="StatBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 10
theme = ExtResource("2_odtiu")
text = "+X/s"
horizontal_alignment = 2
vertical_alignment = 1
